feat: add customizable validation for replication items
